--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                  <h2>Uma introdução sobre análise de falhas</h2>
                 </div>
                 <div class="">
-                 <img src="Img/e-book_site.png" alt="e-book"><!--imagen-->
+                 <img src="img/e-book_site.png" alt="e-book"><!--imagen-->
                 </div> 
             </div>  
             <div class="ebook-link">
@@ -130,7 +130,7 @@
                         </div>
                         <br>
                         <div class="consultoria">
-                            <img src="Img/consultorias.jpeg" alt="consultoria" class="consultoria-img">
+                            <img src="img/consultorias.jpeg" alt="consultoria" class="consultoria-img">
                         </div>
                     </div>
                 </div>
