--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <a href="" class="logo">
-                    <img src="Img/Logo_capa.png" alt="logo capa" class="logo"></a>
+                    <img src="img/Logo_capa.png" alt="logo capa" class="logo"></a>
             </div>
         </div>
 
