--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             </ul>
                         </div>
                         <div class="consultoria">
-                            <img src="Img/Consultoria.png" alt="consultoria" class="consultoria-img">
+                            <img src="img/Consultoria.png" alt="consultoria" class="consultoria-img">
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     </div>
 
                     <div class="analises-img">
-                        <img src="Img/Análises Laboratoriais.jpg" alt="análises_laboratoriais">
+                        <img src="img/Análises Laboratoriais.jpg" alt="análises_laboratoriais">
                     </div>
                 </div>
 
