--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <a href="" class="logo">
-                    <img src="img/Logo_capa.png" alt="logo capa" class="logo"></a>
+                    <img src="" alt="logo capa" class="logo"></a>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
                     <h2>Uma introdução sobre análise de falhas</h2>
                 </div>
                 <div class="">
-                    <img src="Img/e-book_site.png" alt="e-book" class="e-book-img">
+                    <img src="" alt="e-book" class="e-book-img">
                 </div>
             </div>
             <div class="ebook-link">
@@ -141,7 +141,7 @@
                             </ul>
                         </div>
                         <div class="consultoria">
-                            <img src="img/Consultoria.png" alt="consultoria" class="consultoria-img">
+                            <img src="" alt="consultoria" class="consultoria-img">
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="analises-img">
-                        <img src="img/Análises Laboratoriais.jpg" alt="análises_laboratoriais">
+                        <img src="" alt="análises_laboratoriais">
                     </div>
                 </div>
 
@@ -190,7 +190,7 @@
                         </ul>
                     </div>
                     <div class="analisefalhas-img">
-                        <img src="Img/análise de falhas.png" alt="análise de falhas">
+                        <img src="" alt="análise de falhas">
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                         </ul>
                     </div>
                     <div class="ensaios-img">
-                        <img src="Img/ensaios-mecanicos.jpg" alt="Ensaios mecânicos"><!--imagen-->
+                        <img src="" alt="Ensaios mecânicos"><!--imagen-->
                     </div>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                         </ul>
                     </div>
                     <div class="residuos-img">
-                        <img src="Img/residuos.png" alt="valorização dos residuos">
+                        <img src="" alt="valorização dos residuos">
                     </div>
                 </div>
 
