--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br"><!--Linguangem do Site-->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /><!--Reponsividade para outros Dispositivos-->
-    <link rel="stylesheet" href="index.css"><!--Referenciar o CSS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><!--API da Google-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"><!--API da Google-->
-    <script defer src="app.js"></script><!--Referencia o JavaScript-->
-</head>
-<body>
-    <header>
-    <!--Header Inicio-->
-        <section class="home" id="home"><!--Class Home-->
-        <nav class="nav">
-            <ul class="nav-list"><!--Class Nav List + lista de atalhos-->
-                <li><a href="#home">Home</a></li>
-                <li><a href="#empresa">A Empresa</a></li>
-                <li><a href="#servico">Serviço</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-        </section>
-    <!--Header Fim-->
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navbar Animação em Bolha</title>
+    <link rel="stylesheet" href="index.css" />
+    <script defer src="app.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="nav">
+        <a href="/" class="logo"></a>
+        <button class="hamburger"></button>
+        <ul class="nav-list">
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
         <div class="container3">
